# Shadegin

./: .gitignore  README.md
include/: nanosleep.h
shadegin/: CMakeLists.txt  build.bat  build.sh  file  nanosleep.c
shadegin/game_files/: gravity.c  gravity.h  particle.c  particle.h  player.c  player.h  point.c  point.h  raycast.c  raycast.h  utils.h  wall.c  wall.h
shadegin/game_files/ship/: ship.c  ship.h
shadegin/game_files/ship/cannon/: cannon.c  cannon.h
shadegin/game_files/ship/wheel/: wheel.c  wheel.h
shadegin/game_files/walls/: wall.c  wall.h
shadegin/game_files_/: player.c  player.h
shadegin/shaders/: default.frag  default.vert
shadegin/src/: main.c
shadegin/src/engine/: global.h  input.h  types.h  util.c  util.h
shadegin/src/engine/common/config/: config.c
shadegin/src/engine/common/global/: global.h
shadegin/src/engine/game_objects/: box_collider.c  box_collider.h  collider.c  collider.h  game_object.c  game_object.h  renderer.c  renderer.h  serialized.h
shadegin/src/engine/game_objects/collider/: box_collider.c  box_collider.h  collider.c  collider.h
shadegin/src/engine/game_objects/map/: scene.c  scene.h
shadegin/src/engine/game_objects/renderer/: box_renderer.c  box_renderer.h  renderer.c  renderer.h
shadegin/src/engine/io/: io.c  io.h
shadegin/src/engine/network/client/: client.c  client.h
shadegin/src/engine/network/network/: network.c
shadegin/src/engine/network/room/: room.c  room.h
shadegin/src/engine/network/server/: server.c  server.h
shadegin/src/engine/networking/: client.c  client.h  room.c  room.h  server.c  server.h
shadegin/src/engine/object/: object.c  object.h
shadegin/src/engine/object/collider/: box_collider.c  collider.h
shadegin/src/engine/object/game_object/: game_object.c  game_object.h
shadegin/src/engine/object/map/: scene.c  scene.h
shadegin/src/engine/object/model/: model.c  model.h
shadegin/src/engine/object/renderer/: box_renderer.c  box_renderer.h  mesh_renderer.c  mesh_renderer.h  renderer.c  renderer.h
shadegin/src/engine/object/serialized/: serialized.h
shadegin/src/engine/render/: camera.c  camera.h  render.c  render.h  render_init.c  render_internal.h  render_util.c
shadegin/src/engine/render/camera/: camera.c  camera.h
shadegin/src/engine/render/render/: render.c  render.h  render_init.c  render_internal.h  render_util.c
shadegin/src/engine/threading/: thread_pool.c  thread_pool.h
shadegin/src/engine/threading/thread_pool/: thread_pool.c  thread_pool.h
